<resources>
    <string name="app_name">EmpMgmt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Employee Management</string>
    <string name="nav_header_subtitle">created by Srijan Srivastava</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Login</string>
    <string name="home_second">Home</string>
    <string name="menu_home">Home</string>
    <string name="menu_addEmp">Add Employees</string>
    <string name="menu_display">Display Employees</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_emp">No employees added</string>
    <string name="settings">Settings</string>


</resources>
